--- a/charts/vela-core/templates/definitions/manualscalars.yaml
+++ b/charts/vela-core/templates/definitions/manualscalars.yaml
@@ -5,7 +5,7 @@ metadata:
     definition.oam.dev/apiVersion: core.oam.dev/v1alpha2
     definition.oam.dev/kind: ManualScalerTrait
     definition.oam.dev/description: "Scale replica for workload"
-  name: manualscalertraits.core.oam.dev
+  name: scaler
   namespace: default
 spec:
   appliesToWorkloads:
