--- a/charts/vela-core/templates/definitions/routetrait.yaml
+++ b/charts/vela-core/templates/definitions/routetrait.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
-  name: routes.standard.oam.dev
+  name: route
   annotations:
     definition.oam.dev/apiVersion: standard.oam.dev/v1alpha1
     definition.oam.dev/kind: Route
