support KEDA cron + resource metrics with Keda context

--- a/samples/autoscalers/PodSpecWorkload/sample_component.yaml
+++ b/samples/autoscalers/PodSpecWorkload/sample_component.yaml
@@ -15,3 +15,8 @@ spec:
             ports:
               - containerPort: 80
                 name: nginx
+            resources:
+              limits:
+                cpu: "1"
+              requests:
+                cpu: "0.1"
