--- a/samples/autoscalers/resource/cr-itself/standard_v1alpha2_autoscaler.yaml
+++ b/samples/autoscalers/resource/cr-itself/standard_v1alpha2_autoscaler.yaml
@@ -10,7 +10,16 @@ spec:
       enabled: true                   # optional. whether to take effect. default is true
       type: cpu                       # required. cpu/memory/storage/ephemeral-storage、cron、pps、qps/rps、custom
       condition:
-        target: 2                     # required. 阈值，扩容临界值  resource --> 85%
+        target: 85                    # required. 阈值，扩容临界值  resource --> 85%
+    - name: weekend-cron
+      enabled: true
+      type: cron                      # cron scaler. 表明 scaler 是 KEDA
+      condition:
+        startAt: "10:14"              # required. "HHMM"
+        duration: 2h                  # required. 持续时长；start hour + duration < 24
+        days: ["Monday", "Saturday"]  # optional. In which days the condition will take effect
+        replicas: 5                   # optional.
+        timezone: Asia/Shanghai       # optional. time zone
   targetWorkload:                     # set by users or be auto-patched by outsiders, like OAM
     name: "php-apache"
     apiVersion: "extensions/v1beta1"  # optional
