--- a/.gitignore
+++ b/.gitignore
@@ -31,15 +31,9 @@ vendor/
 # Vscode files
 .vscode
 
-pkg/test/vela
-config/crd/bases
 tmp/
 
-cmd/vela/fake/source.go
-cmd/vela/fake/chart_source.go
-charts/vela-core/crds/_.yaml
-
-testapp/.vela/
+examples/testapp/.vela/
 
 # Dashboard
 node_modules/
