move codecov upload to github workflow

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,3 +35,11 @@ jobs:
 
       - name: Run Make test
         run: make test
+
+      - name: Upload coverage report
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.txt
+          flags: unittests
+          name: codecov-umbrella
