--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ e2e/vela
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+coverage.txt
 
 # Kubernetes Generated files - skip generated files, except for vendored files
 
