Revert "Appfile: Extensible, User-friendly Application Config Format (#390)"
This reverts commit b08c6b944128fefe152577ae3a445ee7ed0e4557.

--- a/.gitignore
+++ b/.gitignore
@@ -40,10 +40,8 @@ cmd/vela/fake/source.go
 cmd/vela/fake/chart_source.go
 charts/vela-core/crds/_.yaml
 
-.vela/
-
 # Dashboard
-node_modules/
+dashboard/node_modules/
 .eslintcache
 dashboard/dist/
 dashboard/package-lock.json
