--- a/examples/testapp/vela.yml
+++ b/examples/testapp/vela.yml
@@ -3,13 +3,18 @@ name: testapp
 
 services:
   express-server:
+    # this image will be used in both build and deploy config
+    image: oamdev/testapp:v1
+
     build:
-      image: oamdev/testapp:v1
+      # Here more runtime specific build templates will be supported, like NodeJS, Go, Python, Ruby.
       docker:
         file: Dockerfile
         context: .
-      push: # without any setting, by default push image directly
-        local: kind
+
+      # Uncomment the following to push to local kind cluster
+      # push:
+      #   local: kind
 
     # type: webservice (default) | task
 
