--- a/documentation/kubecondemo/vela.yml
+++ b/documentation/kubecondemo/vela.yml
@@ -7,7 +7,7 @@ services:
     name: alibabaRds
 
   data-api:
-    type: backend
+    type: webservice
     image: artursouza/rudr-data-api:0.50
     name: data-api
     port: 3009
@@ -17,49 +17,49 @@ services:
       - name: DATABASE_DRIVER
         value: postgresql
       - name: DATABASE_HOSTNAME
-        _useSecret: true
-        secretKeyRef: 
-          name: db-conn
-          key: endpoint
+        valueFrom:
+          secretKeyRef: 
+            name: db-conn
+            key: endpoint
       - name: DATABASE_USER 
-        _useSecret: true
-        secretKeyRef: 
-          name: db-conn
-          key: username
-      - name: DATABASE_PASSWORD 
-        _useSecret: true
-        secretKeyRef:
-          name: db-conn
-          key: password
+        valueFrom:
+          secretKeyRef: 
+            name: db-conn
+            key: username
+      - name: DATABASE_PASSWORD
+        valueFrom:
+          secretKeyRef:
+            name: db-conn
+            key: password
       - name: DATABASE_PORT
         value: "1921"
 
   flights-api:
-    type: backend
+    type: webservice
     image: sonofjorel/rudr-flights-api:0.49
     name: flights-api
     port: 3003
     env:
       - name: DATA_SERVICE_URI 
-        value: http://data-api.default.svc.cluster.local:3009/
+        value: http://data-api.default.svc.cluster.local:8080/
 
   quakes-api:
-    type: backend
+    type: webservice
     image: sonofjorel/rudr-quakes-api:0.49
     name: quakes-api
     port: 3012
     env:
       - name: DATA_SERVICE_URI 
-        value: http://data-api.default.svc.cluster.local:3009/
+        value: http://data-api.default.svc.cluster.local:8080/
 
   weather-api:
-    type: backend
+    type: webservice
     image: sonofjorel/rudr-weather-api:0.49
     name: weather-api
     port: 3015
     env:
       - name: DATA_SERVICE_URI 
-        value: http://data-api.default.svc.cluster.local:3009/
+        value: http://data-api.default.svc.cluster.local:8080/
 
   web-ui:
     type: webservice
@@ -68,11 +68,11 @@ services:
     port: 8080
     env:
       - name: FLIGHTS_API_ROOT
-        value: http://flights-api.default.svc.cluster.local:3003/
+        value: http://flights-api.default.svc.cluster.local:8080/
       - name: WEATHER_API_ROOT
-        value: http://weather-api.default.svc.cluster.local:3015/
+        value: http://weather-api.default.svc.cluster.local:8080/
       - name: QUAKES_API_ROOT
-        value: http://quakes-api.default.svc.cluster.local:3012/
+        value: http://quakes-api.default.svc.cluster.local:8080/
 
 
   
