--- a/documentation/kubecondemo/vela.yml
+++ b/documentation/kubecondemo/vela.yml
@@ -66,8 +66,10 @@ services:
     image: sonofjorel/rudr-web-ui:0.49
     name: web-ui
     port: 8080
+    route:
+      domain: kubevela.kubecon.demo
     env:
-      - name: FLIGHTS_API_ROOT
+      - name: FLIGHT_API_ROOT
         value: http://flights-api.default.svc.cluster.local:8080/
       - name: WEATHER_API_ROOT
         value: http://weather-api.default.svc.cluster.local:8080/
