--- a/charts/vela-core/templates/definitions/metrics.yaml
+++ b/charts/vela-core/templates/definitions/metrics.yaml
@@ -1,12 +1,3 @@
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  labels:
-    mornitoring: oam
-  name: monitoring
-
----
 apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
@@ -30,6 +21,13 @@ spec:
   workloadRefPath: spec.workloadRef
   extension:
     template: |-
+      output: {
+        apiVersion: "standard.oam.dev/v1alpha1"
+        kind:       "MetricsTrait"
+        spec: {
+          scrapeService: parameter
+        }
+      }
       #metrics: {
         // +usage=format of the metrics, default as prometheus
         // +short=f
@@ -37,17 +35,9 @@ spec:
         path:    *"/metrics" | string
         scheme:  *"http" | string
         enabled: *true | bool
-        port:    *8080 | >=1024 & uint16
+        port:    *8080 | >=1024 & <=65535 & int
         // +usage= the label selector for the pods, default is the workload labels
         selector?: [string]: string
       }
-      spec: {
-        apiVersion: "standard.oam.dev/v1alpha1"
-          kind:       "MetricsTrait"
-          spec: {
-            scrapeService: parameter
-          }
-      }
       parameter: #metrics
-      output: {}
-
+      
