--- a/charts/vela-core/templates/definitions/route.yaml
+++ b/charts/vela-core/templates/definitions/route.yaml
@@ -8,10 +8,9 @@ metadata:
     definition.oam.dev/description: "Add a route for workload"
 spec:
   appliesToWorkloads:
-    - core.oam.dev/v1alpha2.ContainerizedWorkload
-    - standard.oam.dev/v1alpha1.PodSpecWorkload
-    - deployments.apps
     - webservice
+    - deployments.apps
+    - podspecworkloads.standard.oam.dev
   workloadRefPath: spec.workloadRef
   definitionRef:
     name: routes.standard.oam.dev
@@ -22,14 +21,23 @@ spec:
         kind:       "Route"
         spec: {
           host: parameter.domain
-          tls: {
-            issuerName: parameter.issuer
+      
+          if parameter.issuer != "" {
+            tls: {
+              issuerName: parameter.issuer
+            }
           }
+      
+          rules: parameter.rules
         }
       }
       #route: {
         domain: *"" | string
         issuer: *"" | string
+        rules: [...{
+          path: string
+          rewriteTarget: *"" | string
+        }]
       }
       parameter: #route
-
+      
