--- a/charts/vela-core/templates/definitions/route.yaml
+++ b/charts/vela-core/templates/definitions/route.yaml
@@ -28,16 +28,17 @@ spec:
             }
           }
       
-          rules: parameter.rules
+          if parameter["rules"] != _|_ {
+            rules: parameter.rules
+          }
         }
       }
       #route: {
         domain: *"" | string
         issuer: *"" | string
-        rules: [...{
+        rules?: [...{
           path: string
           rewriteTarget: *"" | string
         }]
       }
       parameter: #route
-      
