--- a/charts/vela-core/templates/definitions/webservice.yaml
+++ b/charts/vela-core/templates/definitions/webservice.yaml
@@ -26,7 +26,9 @@ spec:
             containers: [{
               name:  context.name
               image: parameter.image
-              env: parameter.env
+              if parameter["env"] != _|_ {
+                env: parameter.env
+              }
               ports: [{
                 containerPort: parameter.port
               }]
@@ -43,7 +45,7 @@ spec:
         // +short=p
         port:  *6379 | int
       
-        env: [...{
+        env?: [...{
           name:  string
           value?: string
           valueFrom?: {
