move and remove extra parameter def
Signed-off-by: Hongchao Deng <hongchaodeng1@gmail.com>

--- a/charts/vela-core/templates/defwithtemplate/manualscale.yaml
+++ b/charts/vela-core/templates/defwithtemplate/manualscale.yaml
@@ -24,8 +24,7 @@ spec:
           replicaCount: parameter.replica
         }
       }
-      #scale: {
+      parameter: {
         //+short=r
         replica: *1 | int
       }
-      parameter: #scale
