--- a/charts/vela-core/templates/defwithtemplate/metrics.yaml
+++ b/charts/vela-core/templates/defwithtemplate/metrics.yaml
@@ -28,7 +28,7 @@ spec:
           scrapeService: parameter
         }
       }
-      #metrics: {
+      parameter: {
         // +usage=format of the metrics, default as prometheus
         // +short=f
         format:  *"prometheus" | string
@@ -39,5 +39,4 @@ spec:
         // +usage= the label selector for the pods, default is the workload labels
         selector?: [string]: string
       }
-      parameter: #metrics
       
