--- a/charts/vela-core/templates/defwithtemplate/webservice.yaml
+++ b/charts/vela-core/templates/defwithtemplate/webservice.yaml
@@ -36,7 +36,7 @@ spec:
           }
         }
       }
-      #webservice: {
+      parameter: {
         // +usage=specify app image
         // +short=i
         image: string
@@ -56,4 +56,4 @@ spec:
           }
         }]
       }
-      parameter: #webservice
+      
