--- a/charts/vela-core/templates/defwithtemplate/task.yaml
+++ b/charts/vela-core/templates/defwithtemplate/task.yaml
@@ -26,7 +26,7 @@ spec:
               }]
         }
       }
-      #task: {
+      parameter: {
         // +usage=specify number of tasks to run in parallel
         // +short=c
         count: *1 | int
@@ -35,6 +35,4 @@ spec:
         // +short=i
         image: string
       }
-      parameter: #task
-      
       
