--- a/charts/vela-core/templates/defwithtemplate/worker.yaml
+++ b/charts/vela-core/templates/defwithtemplate/worker.yaml
@@ -30,10 +30,9 @@ spec:
         }
       }
       
-      #backend: {
+      parameter: {
         // +usage=specify app image
         // +short=i
         image: string
       }
-      parameter: #backend
       
