--- a/pkg/plugins/testdata/traitDef.yaml
+++ b/pkg/plugins/testdata/traitDef.yaml
@@ -16,7 +16,6 @@ spec:
       		domain: parameter.domain
       	}
       }
-      #route: {
+      parameter: {
       	domain: string
       }
-      parameter: #route
