--- a/pkg/plugins/testdata/manualscalars.yaml
+++ b/pkg/plugins/testdata/manualscalars.yaml
@@ -22,8 +22,7 @@ spec:
       		replicaCount: parameter.replica
       	}
       }
-      #scale: {
+      parameter: {
       	//+short=r
       	replica: *2 | int
       }
-      parameter: #scale
