add route tuturiol
Signed-off-by: 天元 <jianbo.sjb@alibaba-inc.com>

--- a/charts/vela-core/crds/standard.oam.dev_routes.yaml
+++ b/charts/vela-core/crds/standard.oam.dev_routes.yaml
@@ -241,6 +241,8 @@ spec:
                 - kind
                 - name
                 type: object
+              status:
+                type: string
             type: object
         type: object
     served: true
