--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -22,6 +22,14 @@ jobs:
         uses: engineerd/setup-kind@v0.4.0
         with:
           version: "v0.7.0"
+          skipClusterCreation: true
+
+      - name: Setup Kind Cluster
+        run: |
+          kind delete cluster
+          kind create cluster
+          kubectl version
+          kubectl cluster-info
 
       - name: Load Image to kind cluster
         run: make kind-load
@@ -34,7 +42,7 @@ jobs:
 
       - name: Run e2e tests
         run: |
+          make e2e-cleanup
           make e2e-setup
           make e2e-test
           make e2e-api-test
-          make e2e-cleanup
